--- a/index.html
+++ b/index.html
@@ -1,218 +1,82 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8">
-  <title>Dienstregeling Zoeker</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dienstregeling Zoeken - OpenOV</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    /* Container wrapper die beide containers naast elkaar plaatst */
-    .wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      width: 100%;
-      max-width: 1200px;
-    }
-
-    .container {
-      background: white;
-      padding: 2em;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      width: 45%;
       max-width: 600px;
-      text-align: center;
-      transition: background-color 0.3s ease;
-      margin-right: 20px; /* Ruimte tussen de containers */
+      margin: 50px auto;
+      padding: 20px;
     }
-
-    .map-container {
-      width: 45%;
-      height: 500px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-
-    .error-blink {
-      animation: blinkRed 0.5s ease-in-out 2;
-    }
-
-    @keyframes blinkRed {
-      0%, 100% { background-color: white; }
-      25%, 75% { background-color: #ffcccc; }
-    }
-
-    input, select, button {
-      margin-top: 1em;
+    input, button {
+      padding: 10px;
+      margin-top: 10px;
+      font-size: 1rem;
       width: 100%;
-      padding: 0.5em;
-      font-size: 1em;
+      box-sizing: border-box;
     }
-
-    .result {
-      margin-top: 2em;
-      text-align: left;
+    button {
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+      border: none;
     }
-
-    .error-message {
-      color: red;
-      font-weight: bold;
-      margin-top: 1em;
+    button:hover {
+      background-color: #0056b3;
     }
-
-    .departure-times {
-      margin-top: 2em;
-      text-align: left;
+    #resultaat {
+      margin-top: 20px;
+      background: #f9f9f9;
+      padding: 15px;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <!-- Wrapper die de twee containers naast elkaar plaatst -->
-  <div class="wrapper">
-    <!-- De eerste container met dienstregeling -->
-    <div class="container" id="container">
-      <h2>Zoek een dienstregeling</h2>
-      <input type="text" id="trainNumber" placeholder="Voer treinnummer in">
+  <h1>Dienstregeling opzoeken</h1>
+  <p>Voer een treinnummer in (bijv. 4550):</p>
+  <input type="text" id="treinNummer" placeholder="Bijv. 4550" />
+  <button onclick="zoekDienstregeling()">Zoeken</button>
 
-      <select id="provider">
-        <option value="nmbs">NMBS</option>
-        <option value="ns">NS (niet actief)</option>
-      </select>
-
-      <button onclick="getSchedule()">Bekijk dienstregeling</button>
-
-      <div class="result" id="scheduleResult"></div>
-      <div class="departure-times" id="departureTimes"></div>
-    </div>
-
-    <!-- De tweede container met de kaart -->
-    <div id="map" class="map-container"></div>
-  </div>
+  <div id="resultaat"></div>
 
   <script>
-    async function getSchedule() {
-      const trainNumber = document.getElementById("trainNumber").value.trim();
-      const provider = document.getElementById("provider").value;
-      const resultDiv = document.getElementById("scheduleResult");
-      const container = document.getElementById("container");
-      const departureTimesDiv = document.getElementById("departureTimes");
+    async function zoekDienstregeling() {
+      const nummer = document.getElementById('treinNummer').value.trim();
+      const resultaatDiv = document.getElementById('resultaat');
+      resultaatDiv.innerHTML = "Even zoeken...";
 
-      resultDiv.innerHTML = "";
-      departureTimesDiv.innerHTML = "";  // reset departure times section
-
-      if (!trainNumber) {
-        container.classList.add("error-blink");
-        resultDiv.innerHTML = `<div class="error-message">❌ Vul een treinnummer in! ❌</div>`;
-        setTimeout(() => container.classList.remove("error-blink"), 1000);
+      if (!nummer) {
+        resultaatDiv.innerHTML = "Voer een treinnummer in.";
         return;
       }
 
-      if (provider === "nmbs") {
-        try {
-          const response = await fetch(`https://api.irail.be/vehicle/?id=BE.NMBS.${trainNumber}&format=json`);
-
-          if (!response.ok) throw new Error();
-
-          const data = await response.json();
-
-          if (!data.stops || !data.stops.stop) throw new Error();
-
-          let html = `<h3>NMBS Dienstregeling voor trein ${trainNumber}</h3><ul>`;
-          for (const stop of data.stops.stop) {
-            const station = stop.station;
-            const arrival = stop.arrival ? new Date(stop.arrival * 1000).toLocaleTimeString("nl-BE", { hour: "2-digit", minute: "2-digit" }) : "-";
-            const departure = stop.departure ? new Date(stop.departure * 1000).toLocaleTimeString("nl-BE", { hour: "2-digit", minute: "2-digit" }) : "-";
-            const platform = stop.platform || "Onbekend";  // Platforminformatie toegevoegd
-            html += `<li onclick="getDepartureTimes('${station}')"><strong>${station}</strong>: vertrek ${departure}, aankomst ${arrival}, perron ${platform}</li>`;
-          }
-          html += "</ul>";
-          resultDiv.innerHTML = html;
-
-        } catch (error) {
-          container.classList.add("error-blink");
-          resultDiv.innerHTML = `<div class="error-message">❌ Het treinnummer bestaat niet of er is een fout opgetreden! ❌</div>`;
-          setTimeout(() => container.classList.remove("error-blink"), 1000);
-        }
-      }
-
-      else {
-        resultDiv.innerHTML = "NS-dienstregeling is nog niet actief.";
-      }
-    }
-
-    // Nieuwe functie om vertrektijden vanaf een station op te halen
-    async function getDepartureTimes(station) {
-      const departureTimesDiv = document.getElementById("departureTimes");
-
       try {
-        const response = await fetch(`https://api.irail.be/departures/?station=${station}&format=json`);
-
-        if (!response.ok) {
-          departureTimesDiv.innerHTML = `<div class="error-message">❌ Geen vertrektijden beschikbaar voor station ${station}. ❌</div>`;
-          return;
-        }
-
+        const proxyUrl = "https://corsproxy.io/?";
+        const apiUrl = `https://v0.ovapi.nl/ritinfo/${nummer}`;
+        const response = await fetch(proxyUrl + encodeURIComponent(apiUrl));
         const data = await response.json();
 
-        if (!data.departures || !data.departures.departure) {
-          departureTimesDiv.innerHTML = `<div class="error-message">❌ Geen vertrekkende treinen gevonden voor station ${station}. ❌</div>`;
+        if (!data || Object.keys(data).length === 0) {
+          resultaatDiv.innerHTML = "Geen gegevens gevonden voor treinnummer " + nummer;
           return;
         }
 
-        let html = `<h3>Vertrektijden vanaf station ${station}</h3><ul>`;
-        for (const departure of data.departures.departure) {
-          const trainNumber = departure.train;
-          const departureTime = new Date(departure.departure * 1000).toLocaleTimeString("nl-BE", { hour: "2-digit", minute: "2-digit" });
-          const platform = departure.platform || "Onbekend";
-          html += `<li><strong>Trein ${trainNumber}</strong>: Vertrek ${departureTime} vanaf ${platform}</li>`;
-        }
-        html += "</ul>";
-        departureTimesDiv.innerHTML = html;
+        let output = `<h2>Dienstregeling voor trein ${nummer}</h2>`;
+        Object.values(data).forEach(rit => {
+          output += `<p><strong>Vertrek:</strong> ${rit.Origin} om ${rit.ActualDepartureTime || rit.ScheduledDepartureTime}<br>`;
+          output += `<strong>Aankomst:</strong> ${rit.Destination} om ${rit.ActualArrivalTime || rit.ScheduledArrivalTime}</p>`;
+        });
 
+        resultaatDiv.innerHTML = output;
       } catch (error) {
-        departureTimesDiv.innerHTML = `<div class="error-message">❌ Er is een probleem opgetreden bij het ophalen van vertrektijden voor station ${station}. ❌</div>`;
+        console.error(error);
+        resultaatDiv.innerHTML = "Fout bij het ophalen van gegevens.";
       }
     }
-
-    // Functie voor geolocatie en het tonen van de kaart
-    function showMap(lat, lon) {
-      const map = L.map('map').setView([lat, lon], 13);
-
-      // Voeg OpenRailwayMap toe
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-
-      // Voeg een marker toe voor de huidige locatie
-      L.marker([lat, lon]).addTo(map)
-        .bindPopup('Je huidige locatie')
-        .openPopup();
-    }
-
-    // Krijg de huidige locatie van de gebruiker
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(function(position) {
-        const lat = position.coords.latitude;
-        const lon = position.coords.longitude;
-        showMap(lat, lon);
-      }, function(error) {
-        console.error('Fout bij het verkrijgen van de locatie', error);
-      });
-    } else {
-      console.log("Geolocatie wordt niet ondersteund door deze browser.");
-    }
   </script>
-
-  <!-- Voeg Leaflet.js toe voor kaarten -->
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </body>
 </html>
